# ollama-robin

./: .gitignore  README.md  chat.py  pyproject.toml  requirements.txt
src/ollama_robin/: chat.py
src/ollama_robin/tools/: handlers.py  schemas.py
tools/: formatter.py  handlers.py
